--- a/app/src/main/res/menu/options_menu.xml
+++ b/app/src/main/res/menu/options_menu.xml
@@ -11,7 +11,7 @@
         android:id="@+id/action_sort"
         android:orderInCategory="100"
         android:title="Sort"
-        android:icon="@drawable/ic_rate"
+        android:icon="@android:drawable/ic_menu_sort_alphabetically"
         app:showAsAction="always" />
 
 </menu>
